added classes and html tables

--- a/sales.html
+++ b/sales.html
@@ -12,11 +12,7 @@
     </header>
     <main>
       <h2>Sales Stats</h2>
-      <div id="cookieSalesSeattle"></div>
-      <div id="cookieSalesTokyo"></div>
-      <div id="cookieSalesDubia"></div>
-      <div id="cookieSalesParis"></div>
-      <div id="cookieSalesLima"></div>
+      <div id="Sales-Table"></div>
     </main>
     <script src="./js/app.js" type="text/javascript"></script>
   </body>
