added css and images to html pages

--- a/index.html
+++ b/index.html
@@ -4,14 +4,72 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cherry+Swash&family=Montserrat&display=swap" rel="stylesheet"> 
     <title>Salmon Cookies</title>
   </head>
   <body>
     <header>
       <h1>Salmon Cookies</h1>
+      <nav>
+        <ul>
+          <li><a href='./index.html'>Home</a></li>
+          <li><a href="./sales.html">Sales</a></li>
+          <li>Merch (coming soon)</li>
+          <li>Online Orders (coming soon)</li>
+        </ul>
+      </nav>
     </header>
     <main>
-      <a href="./sales.html">Sales</a>
+      <div id='hours'>
+        <article id='hours'>
+          <img src='./img/chinook.bmp'>
+          <h2>Store Locations and Hours</h2>
+          <h3>Seattle</h3>
+          <p> Address:<br> 123 Pike Place<br>Seattle, WA 98008<br><br>Hours:<br> Everyday 6 a.m. - 8 p.m.</p>
+          <h3>Tokyo</h3>
+          <p> Address:<br> 123 Pike Place<br>Seattle, WA 98008<br><br>Hours:<br> Everyday 6 a.m. - 8 p.m.</p>
+          <h3>Paris</h3>
+          <p> Address:<br> 123 Pike Place<br>Seattle, WA 98008<br><br>Hours:<br> Everyday 6 a.m. - 8 p.m.</p>
+          <h3>Dubia</h3>
+          <p> Address:<br> 123 Pike Place<br>Seattle, WA 98008<br><br>Hours:<br> Everyday 6 a.m. - 8 p.m.</p>
+          <h3>Lima</h3>
+          <p> Address:<br> 123 Pike Place<br>Seattle, WA 98008<br><br>Hours:<br> Everyday 6 a.m. - 8 p.m.</p>
+        <article>
+      </div>
+      <div>
+        <article>
+          <section id='about'>
+            <img id='family' src='./img/family.bmp'>
+            <div class='info'>
+              <h2>About Us</h2>
+              <p>text about family and stuff text about family and stufftext about family and stufftext about family and stufftext about family and stufftext about family and stufftext about family and stufftext about family and stufftext about family and stufftext about family and stufftext about family and stufftext about family and stufftext about family and stufftext about family and stufftext about family and stufftext about family and stufftext about family and stufftext about family and stufftext about family and stufftext about family and stufftext about family and stufftext about family and stuff</p>
+            </div>
+          </section>
+          <section id='about'>
+            <img id='cutter' src='./img/cookiecutter.bmp'>
+            <div class='info'>
+              <h2>Our Cookies</h2>
+              <p>text about salmon cookies and stuff text about salmon cookies and stufftext about salmon cookies and stufftext about salmon cookies and stufftext about salmon cookies and stufftext about salmon cookies and stufftext about salmon cookies and stufftext about salmon cookies and stufftext about salmon cookies and stufftext about salmon cookies and stufftext about salmon cookies and stufftext about salmon cookies and stufftext about salmon cookies and stufftext about salmon cookies and stufftext about salmon cookies and stufftext about salmon cookies and stufftext about salmon cookies and stuff</p>
+            </div>
+          </section>
+          <section id='about'>
+            <img id='shirt' src='./img/shirt.bmp'>
+            <div class='info'>
+              <h2>Upcoming Events!</h2>
+              <p>text about events and stuff text about events and stufftext about events and stufftext about events and stufftext about events and stufftext about events and stufftext about events and stufftext about events and stufftext about events and stufftext about events and stufftext about events and stufftext about events and stufftext about events and stufftext about events and stufftext about events and stufftext about events and stufftext about events and stufftext about events and stufftext about events and stufftext about events and stufftext about events and stufftext about events and stuff</p>
+            </div>
+          </section>
+          <section id='about'>
+            <img id='shirt' src='./img/cookie.bmp'>
+            <div class='info'>
+              <h2>User Stories</h2>
+              <p>text about user and stufftext about user and stufftext about user and stufftext about user and stufftext about user and stufftext about user and stufftext about user and stufftext about user and stufftext about user and stufftext about user and stufftext about user and stufftext about user and stufftext about user and stufftext about user and stufftext about user and stufftext about user and stufftext about user and stufftext about user and stufftext about user and stufftext about user and stufftext about user and stuff</p>
+            </div>
+          </section>
+        </article>
+      </div>
     </main>
   </body>
 </html>
