--- a/sales.html
+++ b/sales.html
@@ -4,11 +4,22 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cherry+Swash&family=Montserrat&display=swap" rel="stylesheet"> 
     <title>Salmon Cookies</title>
   </head>
   <body>
     <header>
       <h1>Salmon Cookies</h1>
+      <nav>
+        <ul>
+          <li><a href='./index.html'>Home</a></li>
+          <li><a href="./sales.html">Sales</a></li>
+          <li>Merch (coming soon)</li>
+          <li>Online Orders (coming soon)</li>
+        </ul>
+      </nav>
     </header>
     <main>
       <h2>Sales Stats</h2>
